--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,38 @@
   <!-- Footer -->
   <footer class="py-5 mt-5 footer-hts">
     <div class="container">
-      <p class="pt-3 text-black">해피투씨유</p>
-      <p class="pt-3 text-black">선생님</p>
-      <p class="pt-3 text-black">고객센터</p>
-      <p class="pt-3 text-black">지원</p>
+      <div class="row">
+        <div class="col-lg-2">
+          <span class="footer-title">해피투씨유</span>
+          <p class="footer-contents">회사 소개</p>
+          <p class="footer-contents">블로그</p>
+          <p class="footer-contents">언론보도</p>
+        </div>
+        <div class="col-lg-2">
+          <span class="footer-title">선생님</span>
+          <p class="footer-contents">선생님 신청</p>
+        </div>
+        <div class="col-lg-3">
+          <span class="footer-title">고객센터</span>
+          <p class="footer-contents">전화: 02.2038.4330</p>
+          <p class="footer-contents">운영시간: 평일 09:00 ~ 20:00</p>
+        </div>
+        <div class="col-lg-2">
+          <span class="footer-title">지원</span>
+          <p class="footer-contents">공지사항</p>
+          <p class="footer-contents">FAQ</p>
+        </div>
+        <div class="col-lg-3">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <p class="footer-contents">(주)해피투씨유ㅣ대표. : 이예진ㅣ사업자 등록 번호: 297-87-01570ㅣ개인정보 관리책임자: 유정아ㅣ관리책임자 이메일: helloyuja@mealgen.net
+      <p class="footer-contents" style="margin-top:15px;">회사 주소 : 서울특별시 종로구 종로6 5층 스타트업 빌리지</p>
+    </div>
+    <img class="ml-auto" src="img/visual.png"/>
+    <div class="container">
+      <p class="footer-agree">이용약관 ㅣ 개인정보취급방침 </p>
     </div>
     <!-- /.container -->
   </footer>
