--- a/index.html
+++ b/index.html
@@ -108,12 +108,14 @@
         </div>
       </div>
     </section>
-
+    <img src="img/mask.png" class="img-mask"/>
     <!-- Page Content -->
     <div class="container">
       <div class="row ml-1">
         <h2 class="title-text-1">This Week </h2>
         <h2 class="title-text-2">이번주 LIVE!</h2>
+        <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
+        <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
       <!-- Marketing Icons Section -->
       <div class="row">
@@ -167,8 +169,8 @@
       <!-- /.row -->
 
       <!-- 온라인 VOD 클래스 -->
-      <div class="row ml-1">
-        <h2 class="title-text-1">Online</h2>
+      <div class="row ml-1" style="margin-top:92px">
+        <h2 class="title-text-1-1">Online</h2>
         <h2 class="title-text-2">온라인 VOD 클래스</h2>
       </div>
 
@@ -176,46 +178,46 @@
         <div class="col-lg-3 mb-4">
           <div class="card-online h-100">
             <img class="img-thum" src="img/o-1.png" />
-              <span class="card-title-0">작곡으로 읽는 나의 마음</span>
-              <span class="card-text-0">이민호 · 음악지능</span>
-              <div class="row card-extra">
-                <i class="fas fa-star"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-              </div>
+            <span class="card-title-0">작곡으로 읽는 나의 마음</span>
+            <span class="card-text-0">이민호 · 음악지능</span>
+            <div class="row card-extra">
+              <i class="fas fa-star"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 mb-4">
           <div class="card-online h-100">
             <img class="img-thum" src="img/o-2.png" />
-              <span class="card-title-0">매일매일 쓰고 싶은 나만의 일기</span>
-              <span class="card-text-0">김건구 · 언어지능</span>
-              <div class="row card-extra">
-                <i class="fas fa-star"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-                <span class="span-ready ml-auto" style="margin-right:25px">준비물</span>
-              </div>
+            <span class="card-title-0">매일매일 쓰고 싶은 나만의 일기</span>
+            <span class="card-text-0">김건구 · 언어지능</span>
+            <div class="row card-extra">
+              <i class="fas fa-star"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+              <span class="span-ready ml-auto" style="margin-right:25px">준비물</span>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 mb-4">
           <div class="card-online h-100">
             <img class="img-thum" src="img/o-3.png" />
-              <span class="card-title-0">신나는 비트박스</span>
-              <span class="card-text-0">투악스 · 음악지능</span>
-              <div class="row card-extra">
-                <i class="fas fa-star"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-              </div>
+            <span class="card-title-0">신나는 비트박스</span>
+            <span class="card-text-0">투악스 · 음악지능</span>
+            <div class="row card-extra">
+              <i class="fas fa-star"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 mb-4">
           <div class="card-online h-100">
             <img class="img-thum" src="img/o-4.png" />
-              <span class="card-title-0">키즈 뮤지컬</span>
-              <span class="card-text-0">엄소연 · 신체운동지능</span>
-              <div class="row card-extra">
-                <i class="fas fa-star"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-              </div>
+            <span class="card-title-0">키즈 뮤지컬</span>
+            <span class="card-text-0">엄소연 · 신체운동지능</span>
+            <div class="row card-extra">
+              <i class="fas fa-star"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+            </div>
           </div>
         </div>
       </div>
@@ -233,6 +235,8 @@
       <div class="row ml-1">
         <h2 class="title-text-1">Hot</h2>
         <h2 class="title-text-2">지금 가장 인기 있는 LIVE</h2>
+        <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
+        <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
       <!-- Marketing Icons Section -->
       <div class="row">
@@ -283,15 +287,17 @@
           </div>
         </div>
       </div>
-      <div class="row ml-1">
-        <h2 class="title-text-1">Event</h2>
+      <div class="row ml-1" style="margin-top:93px;">
+        <h2 class="title-text-1-1">Event</h2>
         <h2 class="title-text-2">11월 한정 아이쿠카 특가 LIVE</h2>
+        <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
+        <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
       <!-- Marketing Icons Section -->
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <img src="img/10%.png" style="position: absolute" />
+            <img src="img/sale-10.png" style="position: absolute" />
             <i class="far fa-heart icon-like"></i>
             <img class="img-thum" src="img/class-3-announcer-home-thum.png" />
             <span class="card-title-0">아나운서한테 배우는 스피치 트레이닝</span>
@@ -306,7 +312,7 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <img src="img/10%.png" style="position: absolute" />
+            <img src="img/sale-10.png" style="position: absolute" />
             <i class="far fa-heart icon-like"></i>
             <img class="img-thum" src="img/2-52.png" />
             <span class="card-title-0">용기 쑥쑥! 부비의 용기 여행 같이 떠나요!</span>
@@ -322,7 +328,7 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <img src="img/10%.png" style="position: absolute" />
+            <img src="img/sale-10.png" style="position: absolute" />
             <i class="far fa-heart icon-like"></i>
             <img class="img-thum" src="img/invalid-name.png" />
             <span class="card-title-0">이윤규 변호사와 함께 떠나는 초등 공부법!</span>
@@ -337,77 +343,107 @@
         </div>
       </div>
       <!-- 높은 리뷰와 평점의 선생님 -->
-      <h3 class="my-4">높은 리뷰와 평점의 선생님</h1>
+      <div class="row ml-1" style="margin-top:90px;">
+        <h2 class="title-text-1-1">BEST</h2>
+        <h2 class="title-text-2">높은 리뷰와 평점의 선생님</h2>
+        <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
+        <img class="ic-24" src="img/ic-24-right.svg" />
+      </div>
 
-        <div class="container mt-4">
-          <div class="row">
-            <div class="col-lg-2 mb-4">
-              <a href="#" class="btn btn-hts">1</a>
-            </div>
-            <div class="col-lg-2 mb-4">
-              <a href="#" class="btn btn-hts">2</a>
-            </div>
-            <div class="col-lg-2 mb-4">
-              <a href="#" class="btn btn-hts">3</a>
-            </div>
-            <div class="col-lg-2 mb-4">
-              <a href="#" class="btn btn-hts">4</a>
-            </div>
-            <div class="col-lg-2 mb-4">
-              <a href="#" class="btn btn-hts">5</a>
-            </div>
-            <div class="col-lg-2 mb-4">
-              <a href="#" class="btn btn-hts">6</a>
-            </div>
-          </div>
-
-        </div>
-
-        <!-- NEW 높은 리뷰와 평점의 선생님 -->
-        <div class="row ml-1">
-          <h2 class="title-text-1">NEW</h2>
-          <h2 class="title-text-2">새롭게 시작되는 신규 LIVE</h2>
-        </div>
-        <!-- Marketing Icons Section -->
+      <div class="container mt-4">
         <div class="row">
           <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-              <i class="far fa-heart icon-like"></i>
-              <img class="img-thum" src="img/new-1.png" />
-              <span class="card-title-0">평생 독서 습관 만들기 - 새로 쓰는 동화책</span>
-              <span class="card-text-0">이루리 · 12월 13일 · LIVE, 온라인</span>
-              <div class="row card-extra">
-                <i class="fas fa-heart text-pink"></i>
-                <span class="card-text-extra text-pink">1</span>
+            <div class="row">
+              <div class="col-lg-6 mb-4">
+                <img src="img/t-1.png" />
+                <span class="card-title-0">이슬기</span>
+                <i class="fas fa-star" style="margin-left:16px;"></i>
+                <span class="card-text-extra">4.8 (120)</span>
+                <span class="card-text-extra text-pink">18명 참여</span>
+              </div>
+              <div class="col-lg-6 mb-4">
+                <img src="img/t-1.png" />
+                <span class="card-title-0">이슬기</span>
+                <i class="fas fa-star" style="margin-left:16px;"></i>
+                <span class="card-text-extra">4.8 (120)</span>
+                <span class="card-text-extra text-pink">18명 참여</span>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-              <i class="far fa-heart icon-like"></i>
-              <img class="img-thum" src="img/new-2.png" />
-              <span class="card-title-0">용기 쑥쑥! 부비의 용기 여행 같이 떠나요!</span>
-              <span class="card-text-0">신지원 · 11월 28일 · LIVE</span>
-              <div class="row card-extra">
-                <i class="fas fa-heart text-pink"></i>
-                <span class="card-text-extra text-pink">18</span>
-                <span class="span-ready ml-auto">준비물</span>
-              </div>
-            </div>
+          <div class="col-lg-2 mg-4">
+            <img src="img/t-1.png" />
+            <span class="card-title-0">이슬기</span>
+            <i class="fas fa-star" style="margin-left:16px;"></i>
+            <span class="card-text-extra">4.8 (120)</span>
+            <span class="card-text-extra text-pink">18명 참여</span>
           </div>
           <div class="col-lg-4 mb-4">
-            <div class="card h-100">
-              <i class="far fa-heart icon-like"></i>
-              <img class="img-thum" src="img/02-home-middle.png" />
-              <span class="card-title-0">이윤규 변호사와 함께 떠나는 초등 공부법!</span>
-              <span class="card-text-0">이윤규 · 11월 29일 · LIVE</span>
-              <div class="row card-extra">
-                <i class="fas fa-heart text-pink"></i>
-                <span class="card-text-extra text-pink">18</span>
-              </div>
+            <div class="col-lg-6 mb-4">
+              <img src="img/t-1.png" />
+              <span class="card-title-0">이슬기</span>
+              <i class="fas fa-star" style="margin-left:16px;"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+              <span class="card-text-extra text-pink">18명 참여</span>
+            </div>
+            <div class="col-lg-6 mb-4">
+              <img src="img/t-1.png" />
+              <span class="card-title-0">이슬기</span>
+              <i class="fas fa-star" style="margin-left:16px;"></i>
+              <span class="card-text-extra">4.8 (120)</span>
+              <span class="card-text-extra text-pink">18명 참여</span>
             </div>
           </div>
         </div>
+
+      </div>
+
+      <!-- NEW 높은 리뷰와 평점의 선생님 -->
+      <div class="row ml-1" style="margin-top:90px;">
+        <h2 class="title-text-1">NEW</h2>
+        <h2 class="title-text-2">새롭게 시작되는 신규 LIVE</h2>
+        <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
+        <img class="ic-24" src="img/ic-24-right.svg" />
+      </div>
+      <!-- Marketing Icons Section -->
+      <div class="row">
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <i class="far fa-heart icon-like"></i>
+            <img class="img-thum" src="img/new-1.png" />
+            <span class="card-title-0">평생 독서 습관 만들기 - 새로 쓰는 동화책</span>
+            <span class="card-text-0">이루리 · 12월 13일 · LIVE, 온라인</span>
+            <div class="row card-extra">
+              <i class="fas fa-heart text-pink"></i>
+              <span class="card-text-extra text-pink">1</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <i class="far fa-heart icon-like"></i>
+            <img class="img-thum" src="img/new-2.png" />
+            <span class="card-title-0">용기 쑥쑥! 부비의 용기 여행 같이 떠나요!</span>
+            <span class="card-text-0">신지원 · 11월 28일 · LIVE</span>
+            <div class="row card-extra">
+              <i class="fas fa-heart text-pink"></i>
+              <span class="card-text-extra text-pink">18</span>
+              <span class="span-ready ml-auto">준비물</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <i class="far fa-heart icon-like"></i>
+            <img class="img-thum" src="img/02-home-middle.png" />
+            <span class="card-title-0">이윤규 변호사와 함께 떠나는 초등 공부법!</span>
+            <span class="card-text-0">이윤규 · 11월 29일 · LIVE</span>
+            <div class="row card-extra">
+              <i class="fas fa-heart text-pink"></i>
+              <span class="card-text-extra text-pink">18</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Footer -->
     <!-- <footer class="py-5 bg-dark">
