--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active" style="background-image: url('img/banner-1.png')">
+          <div class="carousel-item active" style="background-image: url('img/back-1.png')">
+            <div class="container"><img src="img/banner-1.png"></div>
           </div>
-          <div class="carousel-item" style="background-image: url('img/banner-2.png')">
-            <img src="img/banner-2.png">
+          <div class="carousel-item" style="background-image: url('img/back-2.png')">
+            <div class="container"><img src="img/banner-1.png"></div>
           </div>
-          <div class="carousel-item" style="background-image: url('img/banner-3.png')">
-            <img src="img/banner-3.png">
+          <div class="carousel-item" style="background-image: url('img/back-3.png')">
+            <div class="container"><img src="img/banner-1.png"></div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
