--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active" style="background-image: url('img/back-1.png')">
-            <div class="container"><img src="img/banner-1.png"></div>
+            <div class="container"><img src="img/banner-1.png" class="img-thum"></div>
           </div>
           <div class="carousel-item" style="background-image: url('img/back-2.png')">
-            <div class="container"><img src="img/banner-1.png"></div>
+            <div class="container"><img src="img/banner-2.png"></div>
           </div>
           <div class="carousel-item" style="background-image: url('img/back-3.png')">
-            <div class="container"><img src="img/banner-1.png"></div>
+            <div class="container"><img src="img/banner-3.png"></div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
