--- a/footer.html
+++ b/footer.html
@@ -27,13 +27,16 @@
       </div>
     </div>
     <div class="container">
-      <p class="footer-contents">(주)해피투씨유ㅣ대표. : 이예진ㅣ사업자 등록 번호: 297-87-01570ㅣ개인정보 관리책임자: 유정아ㅣ관리책임자 이메일: helloyuja@mealgen.net
-      <p class="footer-contents" style="margin-top:15px;">회사 주소 : 서울특별시 종로구 종로6 5층 스타트업 빌리지</p>
-      <img class="img-footer" src="img/visual.png"/>
-    </div>
-
-    <div class="container">
-      <p class="footer-agree">이용약관 ㅣ 개인정보취급방침 </p>
+      <div class="row">
+        <div class="col-lg-9">
+          <p class="footer-contents">(주)해피투씨유ㅣ대표. : 이예진ㅣ사업자 등록 번호: 297-87-01570ㅣ개인정보 관리책임자: 유정아ㅣ관리책임자 이메일: helloyuja@mealgen.net
+          <p class="footer-contents" style="margin-top:15px;">회사 주소 : 서울특별시 종로구 종로6 5층 스타트업 빌리지</p>
+          <p class="footer-agree">이용약관 ㅣ 개인정보취급방침 </p>
+          </div>
+        <div class="col-log-3">
+          <img  src="img/visual.png"/>
+          </div>
+      </div>
     </div>
     <!-- /.container -->
   </footer>
