--- a/class_live.html
+++ b/class_live.html
@@ -21,14 +21,8 @@
 <body>
   <div w3-include-html="nav.html"></div>
   <!-- Page Content -->
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-lg-8">
-        <img src="img/bitmap.png">
-      </div>
-      <div class="col-lg-4 chat">
-      </div>
-    </div>
+  <div class="container mt-1">
+    <img class="img-live" src="img/chat1.png"/>
   </div>
   <div w3-include-html="footer.html"></div>
 
