--- a/index.html
+++ b/index.html
@@ -356,45 +356,55 @@
           <div class="col-lg-5 mb-4">
             <div class="row">
               <div class="col-lg-6 mb-4">
-                <div class="container">
+                <div class="container text-center">
                   <img src="img/t-1.png" />
                   <p class="teacher-title">이슬기</p>
-                  <i class="fas fa-star" style="text-align:center"></i>
+                  <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
                   <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
                 </div>
               </div>
               <div class="col-lg-6 mb-4">
-                <img src="img/t-1.png" />
-                <span class="card-title-0">이슬기</span>
-                <i class="fas fa-star" style="margin-left:16px;"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-                <span class="card-text-extra text-pink">18명 참여</span>
+                <div class="container text-center">
+                  <img src="img/t-1.png" />
+                  <p class="teacher-title">이슬기</p>
+                  <i class="fas fa-star"></i>
+                  <span class="teacher-text-extra">4.8 (120)</span>
+                  <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-lg-2 mb-4">
-            <img src="img/t-1.png" /><br />
-            <span class="card-title-0">이슬기</span>
-            <i class="fas fa-star" style="margin-left:16px;"></i>
-            <span class="card-text-extra">4.8 (120)</span>
-            <span class="card-text-extra text-pink">18명 참여</span>
+            <div class="container text-center">
+              <img src="img/t-1.png" />
+              <p class="teacher-title">이슬기</p>
+              <i class="fas fa-star"></i>
+              <span class="teacher-text-extra">4.8 (120)</span>
+              <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+            </div>
           </div>
           <div class="col-lg-5 mb-4">
             <div class="row">
-              <div class="col-lg-6 mb-4">
-                <img src="img/t-1.png" />
-                <span class="card-title-0">이슬기</span>
-                <i class="fas fa-star" style="margin-left:16px;"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-                <span class="card-text-extra text-pink">18명 참여</span>
+              <div class="col-lg-1 mb-4">
+              </div>
+              <div class="col-lg-5 mb-4">
+                <div class="container text-center">
+                  <img src="img/t-1.png" />
+                  <p class="teacher-title">이슬기</p>
+                  <i class="fas fa-star"></i>
+                  <span class="teacher-text-extra">4.8 (120)</span>
+                  <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+                </div>
               </div>
               <div class="col-lg-6 mb-4">
-                <img src="img/t-1.png" />
-                <span class="card-title-0">이슬기</span>
-                <i class="fas fa-star" style="margin-left:16px;"></i>
-                <span class="card-text-extra">4.8 (120)</span>
-                <span class="card-text-extra text-pink">18명 참여</span>
+                <div class="container text-center">
+                  <img src="img/t-1.png" />
+                  <p class="teacher-title">이슬기</p>
+                  <i class="fas fa-star"></i>
+                  <span class="teacher-text-extra">4.8 (120)</span>
+                  <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+                </div>
               </div>
             </div>
           </div>
