--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
           <a class="nav-link text-black" href="#">클래스 홈</a>
         </li>
         <li class="nav-item">
-          <u class="nav-link text-black" href="#">LIVE 홈</u>
+          <a class="nav-link text-black" href="class_live.html"><u>LIVE 홈</u></a>
         </li>
         <li class="nav-item">
           <nav class="navbar navbar-light bg-light">
