--- a/mycontents.html
+++ b/mycontents.html
@@ -21,15 +21,18 @@
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container" style="margin-top:68px;">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
-      <div class="row h-100 align-items-center justify-content-center text-center">
-        <div class="col-lg-8 align-self-baseline">
-          <div class="tab-contests">
-            <button class="tablinks" onclick="openmenu(event, 'live')">LIVE 내역</button>
-            <button class="tablinks" onclick="openmenu(event, 'online')">온라인 내역</button>
-            <button class="tablinks" onclick="openmenu(event, 'offline')">오프라인 내역</button>
+      <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
+        <div class="col-lg-8">
+          <div class="container">
+
+            <div class="tab-contents">
+              <button class="tablinks active" onclick="openmenu(event, 'live')">LIVE 내역</button>
+              <button class="tablinks" onclick="openmenu(event, 'online')">온라인 내역</button>
+              <button class="tablinks" onclick="openmenu(event, 'offline')">오프라인 내역</button>
+            </div>
           </div>
 
           <div id="live" class="tabcontent active">
