--- a/class_live.html
+++ b/class_live.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
   <title>해피투씨유</title>
 
@@ -22,7 +23,34 @@
   <div w3-include-html="nav.html"></div>
   <!-- Page Content -->
   <div class="container mt-1">
-    <img class="img-live" src="img/chat1.png"/>
+    <img class="img-live" src="img/chat1.png" />
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-1">
+        <img class="img/img-thum"src="img/live-t1.png" style=""/>
+      </div>
+      <div class="col-lg-6">
+        <p class="teacher-text-extra" style="text-align:left">이슬기 선생님</br>
+          <i class="fas fa-star"></i>
+          4.8 (120)</p>
+      </div>
+      <div class="col-lg-1">
+        <button class="btn-hts text-white">알림</button>
+      </div>
+      <div class="col-lg-4">
+      </div>
+    </div>
+    <div class="col-lg-1">
+    </div>
+    <div class="col-lg-6">
+      <p class="teacher-text-extra" style="text-align:left">이슬기 선생님</br>
+        <i class="fas fa-star"></i>
+        4.8 (120)</p>
+    </div>
+    <div class="col-lg-5">
+    </div>
+
   </div>
   <div w3-include-html="footer.html"></div>
 
