--- a/class_live.html
+++ b/class_live.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-1">
-        <img class="img/img-thum"src="img/live-t1.png" style=""/>
+        <img class="img/img-thum" src="img/live-t1.png" style="" />
       </div>
       <div class="col-lg-6">
         <p class="teacher-text-extra" style="text-align:left">이슬기 선생님</br>
@@ -41,14 +41,29 @@
       <div class="col-lg-4">
       </div>
     </div>
-    <div class="col-lg-1">
+    <div class="row">
+      <div class="col-lg-1">
+      </div>
+      <div class="col-lg-6">
+        <p class="teacher-text-extra">안녕하세요. 아나운서 이슬기입니다.<br>
+          아나운서 스피치 수업으로 친구들과 함께 하면서 스스로 자신감을 키울 수 있도록 도움을 주고 싶어요.</p>
+      </div>
+      <div class="col-lg-5">
+      </div>
     </div>
-    <div class="col-lg-6">
-      <p class="teacher-text-extra" style="text-align:left">이슬기 선생님</br>
-        <i class="fas fa-star"></i>
-        4.8 (120)</p>
+    <div class="row">
+      <div class="col-lg-1">
+      </div>
+      <div class="col-lg-6">
+        <p class="teacher-text-extra" style="color: #e4a8b0;"><u>더보기</u></p>
+      </div>
+      <div class="col-lg-5">
+      </div>
     </div>
-    <div class="col-lg-5">
+    <div class="row">
+      <div class="col-lg-9">
+        <hr class="hr-live">
+      </div>
     </div>
 
   </div>
