--- a/nav.html
+++ b/nav.html
@@ -1,49 +1,52 @@
 <!-- Navigation -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-white fixed-top nav-border">
+<nav class="navbar fixed-top navbar-expand-lg bg-white">
   <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="img/logo-black.svg" class="LOGOBlack"></a>
+    <a class="navbar-brand LOGOBlack" href="index.html"><img src="img/logo-black.svg"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link text-black" href="#">클래스 홈</a>
+        <li class="nav-item" style="margin-left:15px">
+          <a class="nav-link text-black" href="#" style="text-size: 14px;">클래스 홈</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="margin-left:15px">
           <a class="nav-link text-black" href="class_live.html"><u>LIVE 홈</u></a>
         </li>
-        <li class="nav-item">
-          <nav class="navbar navbar-light bg-light">
-            <form class="form-inline">
-              <input class="form-control mr-sm-2" type="search" placeholder="검색어를 입력해주세요" aria-label="Search">
-            </form>
-          </nav>
+        <li class="nav-item" style="margin-left:15px">
+          <form class="form-inline">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fas fa-search" style="color:#e4a8b0"></i></span>
+              </div>
+              <input type="text" class="form-control" placeholder="검색어를 입력해주세요" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+          </form>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link text-black" href="#">선생님 신청</a>
+        <li class="nav-item" style="margin-left:15px; margin-top:9px;">
+          <a class="nav-link text-black" href="#" style="text-size: 14px;">클래스 홈</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="mycontents.html">내 콘텐츠</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="#">알림</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="#">찜목록</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Other Pages
+            <img src="img/ic-100-profile-woman.png" />
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
-            <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-            <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-            <a class="dropdown-item" href="faq.html">FAQ</a>
-            <a class="dropdown-item" href="404.html">404</a>
-            <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+            <a class="dropdown-item" href="#">1</a>
+            <a class="dropdown-item" href="#">2</a>
+            <a class="dropdown-item" href="#">3</a>
+            <a class="dropdown-item" href="#">4</a>
+            <a class="dropdown-item" href="#">5</a>
           </div>
         </li>
       </ul>
