--- a/index.html
+++ b/index.html
@@ -366,22 +366,22 @@
               </div>
               <div class="col-lg-6 mb-4">
                 <div class="container text-center">
-                  <img src="img/t-1.png" />
-                  <p class="teacher-title">이슬기</p>
+                  <img src="img/t-2.png" />
+                  <p class="teacher-title">엄소연</p>
                   <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
-                  <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+                  <p class="teacher-text-extra text-pink">#신체운동지능 #뮤지컬</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-2 mb-4">
             <div class="container text-center">
-              <img src="img/t-1.png" />
-              <p class="teacher-title">이슬기</p>
+              <img src="img/t-3.png" />
+              <p class="teacher-title">신지원</p>
               <i class="fas fa-star"></i>
               <span class="teacher-text-extra">4.8 (120)</span>
-              <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+              <p class="teacher-text-extra text-pink">#공간지능 #리틀마누</p>
             </div>
           </div>
           <div class="col-lg-5 mb-4">
@@ -390,20 +390,20 @@
               </div>
               <div class="col-lg-5 mb-4">
                 <div class="container text-center">
-                  <img src="img/t-1.png" />
-                  <p class="teacher-title">이슬기</p>
+                  <img src="img/t-4.png" />
+                  <p class="teacher-title">이윤규</p>
                   <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
-                  <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+                  <p class="teacher-text-extra text-pink">#자기성찰지능 #공부법</p>
                 </div>
               </div>
               <div class="col-lg-6 mb-4">
                 <div class="container text-center">
-                  <img src="img/t-1.png" />
-                  <p class="teacher-title">이슬기</p>
+                  <img src="img/t-5.png" />
+                  <p class="teacher-title">투악스</p>
                   <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
-                  <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
+                  <p class="teacher-text-extra text-pink">#음악지능 #비트박스</p>
                 </div>
               </div>
             </div>
