--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <img src="img/mask.png" class="img-mask" />
     <!-- Page Content -->
     <div class="container">
-      <div class="row ml-1">
+      <div class="row ml-1 mb-2">
         <h2 class="title-text-1">This Week </h2>
         <h2 class="title-text-2">이번주 LIVE!</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <img src="img/st-hot.png" style="position: absolute" />
+            <img src="img/st-hot-1.png" style="position: absolute" />
             <i class="far fa-heart icon-like"></i>
             <img class="img-thum" src="img/class-3-announcer-home-thum.png" />
             <span class="card-title-0">아나운서한테 배우는 스피치 트레이닝</span>
@@ -153,7 +153,7 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <img src="img/st-hot.png" style="position: absolute" />
+            <img src="img/st-hot-3.png" style="position: absolute" />
             <i class="fas fa-heart icon-like"></i>
             <img class="img-thum" src="img/1-2.png" />
             <span class="card-title-0">이윤규 변호사와 함께 떠나는 초등 공부법!</span>
