--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
           <a class="nav-link text-black" href="#" style="text-size: 14px;">클래스 홈</a>
         </li>
         <li class="nav-item" style="margin-left:15px">
-          <a class="nav-link text-black" href="class_live.html"><u>LIVE 홈</u></a>
+          <a class="nav-link text-black" style="font-weight:700"href="class_live.html"><u>LIVE 홈</u></a>
         </li>
         <li class="nav-item" style="margin-left:15px">
           <form class="form-inline">
@@ -38,6 +38,7 @@
           <a class="nav-link text-black" href="#">찜목록</a>
         </li>
         <li class="nav-item dropdown">
+
           <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img src="img/ic-100-profile-woman.png" />
           </a>
