--- a/mycontents.html
+++ b/mycontents.html
@@ -22,7 +22,7 @@
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top:68px;">
+  <div class="container" style="margin-top:68px; height:100%">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
       <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
