--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 </head>
 
-<body>
 
   <body>
     <div w3-include-html="nav.html"></div>
@@ -114,7 +113,7 @@
     <div class="container">
       <div class="row ml-1 mb-2">
         <h2 class="title-text-1">This Week </h2>
-        <h2 class="title-text-2">이번주 LIVE!</h2>
+        <h2 class="title-text-2">이번주</h2><h2 class="title-text-2-1">LIVE!</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
         <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
@@ -170,7 +169,7 @@
       <!-- /.row -->
 
       <!-- 온라인 VOD 클래스 -->
-      <div class="row ml-1" style="margin-top:92px">
+      <div class="row ml-1 mb-2" style="margin-top:92px">
         <h2 class="title-text-1-1">Online</h2>
         <h2 class="title-text-2">온라인 VOD 클래스</h2>
       </div>
@@ -233,7 +232,7 @@
     <div class="container">
 
       <!-- 지금 가장 인기 있는 LIVE -->
-      <div class="row ml-1">
+      <div class="row ml-1 mb-2">
         <h2 class="title-text-1">Hot</h2>
         <h2 class="title-text-2">지금 가장 인기 있는 LIVE</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
@@ -288,7 +287,7 @@
           </div>
         </div>
       </div>
-      <div class="row ml-1" style="margin-top:93px;">
+      <div class="row ml-1 mb-2" style="margin-top:93px;">
         <h2 class="title-text-1-1">Event</h2>
         <h2 class="title-text-2">11월 한정 아이쿠카 특가 LIVE</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
