--- a/class_live.html
+++ b/class_live.html
@@ -16,6 +16,7 @@
   <!-- Custom styles for this template -->
   <link href="css/happytoseeyou.css" rel="stylesheet">
   <script src="https://www.w3schools.com/lib/w3.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
 
 </head>
 
