--- a/mycontents.html
+++ b/mycontents.html
@@ -22,7 +22,7 @@
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top:68px; height:100%">
+  <div class="container" style="margin-top:68px;">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
       <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
@@ -62,7 +62,9 @@
 
                 </div>
                 <div class="col-lg-4">
+                  <div class="row">
                   <a href="class_live.html"><button class="btn-class">LIVE 강의실 입장 <i class="far fa-play-circle" style="margin-left:20px;"></i></button></a>
+                  </div>
                 </div>
               </div>
             </div>
