--- a/nav.html
+++ b/nav.html
@@ -38,10 +38,13 @@
           <a class="nav-link text-black" href="#">찜목록</a>
         </li>
         <li class="nav-item dropdown">
+          <div class="row">
 
-          <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link text-black" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img src="img/ic-100-profile-woman.png" />
           </a>
+          <img class="ic-nav" src="img/ic-24-nav.png" />
+          </div>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
             <a class="dropdown-item" href="#">1</a>
             <a class="dropdown-item" href="#">2</a>
