--- a/mycontents.html
+++ b/mycontents.html
@@ -22,7 +22,7 @@
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top:68px;">
+  <div class="container" style="margin-top:68px; min-height:70%">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
       <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
@@ -35,7 +35,7 @@
             </div>
           </div>
 
-          <div id="live" class="tabcontent active">
+          <div id="live" class="tabcontent">
             <div class="container mt-4">
               <div class="row">
 
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="row">
-                  <a href="class_live.html"><button class="btn-class">LIVE 강의실 입장 <i class="far fa-play-circle" style="margin-left:20px;"></i></button></a>
+                  <a href="class_live.html"><button class="btn-class">LIVE 강의실 입장<img class="ic_play" src="img/ic-18-play-w.png" style="margin-left:50px;"/></button></a>
                   </div>
                 </div>
               </div>
