--- a/nav.html
+++ b/nav.html
@@ -32,14 +32,14 @@
           <a class="nav-link text-black" href="mycontents.html">내 콘텐츠</a>
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
+          <!-- <button class="round_hts"/> -->
           <a class="nav-link text-black" href="#">알림</a>
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="#">찜목록</a>
         </li>
         <li class="nav-item dropdown">
-          <div class="row">
-
+          <div class="row ml-1">
           <a class="nav-link text-black" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img src="img/ic-100-profile-woman.png" />
           </a>
