--- a/mycontents.html
+++ b/mycontents.html
@@ -22,7 +22,7 @@
   <div w3-include-html="nav.html"></div>
 
   <!-- Page Content -->
-  <div class="container" style="margin-top:68px; min-height:70%">
+  <div class="container" style="margin-top:68px; min-height:50%">
     <h3 class="my-4">내 콘텐츠</h1>
       <hr>
       <div class="row h-100 align-items-center justify-content-center text-center" style="margin-top:20px;">
@@ -44,10 +44,14 @@
                 <div class="row text-center">
                   <span class="card-title-0">전체목록</span>
                   <span class="card-title-0">LIVE 예정</span>
-                  <span class="card-title-0" style="color:#e4a8b0">LIVE 진행중</span>
+                  <div>
+                    <span class="card-title-0" style="color:#e4a8b0; margin-top:50px;">LIVE 진행중</span>
+                    <div id="round_hts"></div>
+                  </div>
                   <span class="card-title-0">종료된 LIVE</span>
                   <span class="card-title-0">취소내역</span>
                 </div>
+
               </div>
             </div>
             <div class="container mt-4">
@@ -55,7 +59,7 @@
                 <div class="col-lg-1">
                   <button class="live-round">LIVE 진행중</button>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 ml-2">
                   <p class="content-title">아나운서한테 배우는 스피치 트레이닝</p>
                   <p class="content-text11">이슬아 선생님</p>
                   <p class="content-text13">11월 19일(토) 13:00 ~ 14:00</p>
@@ -63,7 +67,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="row">
-                  <a href="class_live.html"><button class="btn-class">LIVE 강의실 입장<img class="ic_play" src="img/ic-18-play-w.png" style="margin-left:50px;"/></button></a>
+                    <a href="class_live.html"><button class="btn-class">LIVE 강의실 입장<img class="ic_play" src="img/ic-18-play-w.png" style="margin-left:50px;" /></button></a>
                   </div>
                 </div>
               </div>
