--- a/nav.html
+++ b/nav.html
@@ -30,6 +30,7 @@
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <a class="nav-link text-black" href="mycontents.html">내 콘텐츠</a>
+          <div id="round_hts" style="margin-top:-35px; margin-left:70px;margin-right:0px"></div>
         </li>
         <li class="nav-item" style="margin-left:15px; margin-top:9px;">
           <!-- <button class="round_hts"/> -->
