--- a/mycontents.html
+++ b/mycontents.html
@@ -44,10 +44,8 @@
                 <div class="row text-center">
                   <span class="card-title-0">전체목록</span>
                   <span class="card-title-0">LIVE 예정</span>
-                  <div>
-                    <span class="card-title-0" style="color:#e4a8b0; margin-top:50px;">LIVE 진행중</span>
-                    <div id="round_hts"></div>
-                  </div>
+                  <span class="card-title-0" style="color:#e4a8b0;">LIVE 진행중</span>
+                  <div id="round_hts" style="margin-top:40px; margin-left:-38px"></div>
                   <span class="card-title-0">종료된 LIVE</span>
                   <span class="card-title-0">취소내역</span>
                 </div>
