--- a/mycontents.html
+++ b/mycontents.html
@@ -35,8 +35,8 @@
             </div>
           </div>
 
-          <div id="live" class="tabcontent">
-            <div class="container mt-4">
+          <div id="live" class="tabcontent" style="display:block">
+            <div class="container mt-2" style="margin-left:-15px">
               <div class="row">
 
                 <div class="col-lg-3">
@@ -45,7 +45,7 @@
                   <span class="card-title-0">전체목록</span>
                   <span class="card-title-0">LIVE 예정</span>
                   <span class="card-title-0" style="color:#e4a8b0;">LIVE 진행중</span>
-                  <div id="round_hts" style="margin-top:40px; margin-left:-38px"></div>
+                  <div id="round_hts" style="margin-top:40px; margin-left:-45px"></div>
                   <span class="card-title-0">종료된 LIVE</span>
                   <span class="card-title-0">취소내역</span>
                 </div>
