--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <!-- 온라인 VOD 클래스 -->
       <div class="row ml-1 mb-2" style="margin-top:92px">
         <h2 class="title-text-1-1">Online</h2>
-        <h2 class="title-text-2">온라인 VOD 클래스</h2>
+        <h2 class="title-text-2-1">온라인</h2><h2 class="title-text-2">VOD 클래스</h2>
       </div>
 
       <div class="row">
@@ -237,7 +237,7 @@
       <!-- 지금 가장 인기 있는 LIVE -->
       <div class="row ml-1 mb-2">
         <h2 class="title-text-1">Hot</h2>
-        <h2 class="title-text-2">지금 가장 인기 있는 LIVE</h2>
+        <h2 class="title-text-2">지금 가장</h2><h2 class="title-text-2-1">인기 있는 LIVE</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
         <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
@@ -292,8 +292,7 @@
       </div>
       <div class="row ml-1 mb-2" style="margin-top:93px;">
         <h2 class="title-text-1-1">Event</h2>
-        <h2 class="title-text-2">11월 한정 아이쿠카 특가 LIVE</h2>
-        <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
+        <h2 class="title-text-2">11월 한정 아이쿠카</h2><h2 class="title-text-2-1">특가 LIVE</h2>
         <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
       <!-- Marketing Icons Section -->
@@ -360,7 +359,7 @@
               <div class="col-lg-6 mb-4">
                 <div class="container text-center">
                   <img src="img/t-1.png" />
-                  <p class="teacher-title">이슬기</p>
+                  <p class="teacher-title-1">이슬기</p>
                   <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
                   <p class="teacher-text-extra text-pink">#언어지능 #스피치</p>
@@ -369,7 +368,7 @@
               <div class="col-lg-6 mb-4">
                 <div class="container text-center">
                   <img src="img/t-2.png" />
-                  <p class="teacher-title">엄소연</p>
+                  <p class="teacher-title-1">엄소연</p>
                   <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
                   <p class="teacher-text-extra text-pink">#신체운동지능 #뮤지컬</p>
@@ -380,7 +379,7 @@
           <div class="col-lg-2 mb-4">
             <div class="container text-center">
               <img src="img/t-3.png" />
-              <p class="teacher-title">신지원</p>
+              <p class="teacher-title-1">신지원</p>
               <i class="fas fa-star"></i>
               <span class="teacher-text-extra">4.8 (120)</span>
               <p class="teacher-text-extra text-pink">#공간지능 #리틀마누</p>
@@ -393,7 +392,7 @@
               <div class="col-lg-5 mb-4">
                 <div class="container text-center">
                   <img src="img/t-4.png" />
-                  <p class="teacher-title">이윤규</p>
+                  <p class="teacher-title-1">이윤규</p>
                   <i class="fas fa-star"></i>
                   <span class="teacher-text-extra">4.8 (120)</span>
                   <p class="teacher-text-extra text-pink">#자기성찰지능 #공부법</p>
@@ -402,9 +401,9 @@
               <div class="col-lg-6 mb-4">
                 <div class="container text-center">
                   <img src="img/t-5.png" />
-                  <p class="teacher-title">투악스</p>
+                  <p class="teacher-title-1">투악스</p>
                   <i class="fas fa-star"></i>
-                  <span class="teacher-text-extra">4.8 (120)</span>
+                  <span class="teacher-text-extra" style="margin-top:15px">4.8 (120)</span>
                   <p class="teacher-text-extra text-pink">#음악지능 #비트박스</p>
                 </div>
               </div>
@@ -416,7 +415,7 @@
       <!-- NEW 높은 리뷰와 평점의 선생님 -->
       <div class="row ml-1" style="margin-top:90px;">
         <h2 class="title-text-1">NEW</h2>
-        <h2 class="title-text-2">새롭게 시작되는 신규 LIVE</h2>
+        <h2 class="title-text-2">새롭게 시작되는</h2><h2 class="title-text-2-1">신규 LIVE</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
         <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
