--- a/index.html
+++ b/index.html
@@ -175,10 +175,13 @@
       <div class="row ml-1 mb-2" style="margin-top:92px">
         <h2 class="title-text-1-1">Online</h2>
         <h2 class="title-text-2-1">온라인</h2><h2 class="title-text-2">VOD 클래스</h2>
+        <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
 
       <div class="row">
+        <div class="slide-left"><img src="img/ic-24-left.png"/></div>
         <div class="col-lg-3 mb-4">
+
           <div class="card-online h-100">
             <img class="img-thum" src="img/o-1.png" />
             <span class="card-title-0">작곡으로 읽는 나의 마음</span>
@@ -213,6 +216,7 @@
           </div>
         </div>
         <div class="col-lg-3 mb-4">
+          <div class="slide-right"><img src="img/ic-24-right.png"/></div>
           <div class="card-online h-100">
             <img class="img-thum" src="img/o-4.png" />
             <span class="card-title-0">키즈 뮤지컬</span>
@@ -293,7 +297,6 @@
       <div class="row ml-1 mb-2" style="margin-top:93px;">
         <h2 class="title-text-1-1">Event</h2>
         <h2 class="title-text-2">11월 한정 아이쿠카</h2><h2 class="title-text-2-1">특가 LIVE</h2>
-        <img class="ic-24" src="img/ic-24-right.svg" />
       </div>
       <!-- Marketing Icons Section -->
       <div class="row">
@@ -413,7 +416,7 @@
       </div>
 
       <!-- NEW 높은 리뷰와 평점의 선생님 -->
-      <div class="row ml-1" style="margin-top:90px;">
+      <div class="row ml-1 mb-2" style="margin-top:90px;">
         <h2 class="title-text-1">NEW</h2>
         <h2 class="title-text-2">새롭게 시작되는</h2><h2 class="title-text-2-1">신규 LIVE</h2>
         <img class="ml-auto ic-24" style="margin-right:-1px;" src="img/ic-24-left.svg" />
